--- a/src/css/main.css
+++ b/src/css/main.css
@@ -509,3 +509,87 @@ margin-bottom: 10px;
     font-size: 16px;
     line-height: 24px;
 }
+
+@media (max-width:1192px){
+    .counter-box{
+        margin-bottom:20px;
+    }
+    .mob-navbar{
+        position: relative;
+    }
+    .info-card{
+        margin-bottom: 30px;
+    }
+    
+    .mob-nav{
+        position: absolute;
+        z-index: 9998;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.5s ease;
+        top: 0;
+        left: 0;
+    }
+    
+    .mob-nav.open{
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .btn12 {
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        top: 0;
+        right: 0;
+        -webkit-transition-duration: 0.5s;
+                transition-duration: 0.5s;
+                z-index: 9999;
+      }
+      .btn12 .icon {
+        -webkit-transition-duration: 0.5s;
+                transition-duration: 0.5s;
+        position: absolute;
+        height: 4px;
+        width: 30px;
+        top: 30px;
+        background-color: #fff;
+      }
+      .btn12 .icon:before {
+        -webkit-transition-duration: 0.5s;
+                transition-duration: 0.5s;
+        position: absolute;
+        width: 30px;
+        height: 4px;
+        background-color: #fff;
+        content: "";
+        top: -10px;
+      }
+      .btn12 .icon:after {
+        -webkit-transition-duration: 0.5s;
+                transition-duration: 0.5s;
+        position: absolute;
+        width: 30px;
+        height: 4px;
+        background-color: #fff;
+        content: "";
+        top: 10px;
+      }
+      .btn12.open .icon {
+        -webkit-transition-duration: 0.5s;
+                transition-duration: 0.5s;
+        background: transparent;
+      }
+      .btn12.open .icon:before {
+        -webkit-transform: rotateZ(45deg) scaleX(1.25) translate(6.5px, 6.5px);
+                transform: rotateZ(45deg) scaleX(1.25) translate(6.5px, 6.5px);
+      }
+      .btn12.open .icon:after {
+        -webkit-transform: rotateZ(-45deg) scaleX(1.25) translate(6px, -6px);
+                transform: rotateZ(-45deg) scaleX(1.25) translate(6px, -6px);
+      }
+      .btn12:hover {
+        cursor: pointer;
+      }
+}
+
