--- a/src/css/main.css
+++ b/src/css/main.css
@@ -511,6 +511,47 @@ margin-bottom: 10px;
 }
 
 @media (max-width:1192px){
+    .intro-wrapper {
+        min-height: unset;
+    }
+    .intro-wrapper img{
+        width:200px;
+    }
+    .intro-wrapper h1 {
+        font-size: 40px;
+        line-height: 40px;
+
+    }
+    .about-wrapper{
+        padding: 30px;
+        min-height: unset;
+    }
+    .about-wrapper p {
+        font-size: 12px;
+        line-height: 20px;
+        color: #fff;
+    }
+    .about-list li {
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .btn-custom-lg {
+        width: 100%;
+        height: 42px;
+        font-size: 16px;
+        line-height: 24px;
+        padding: 8px 0;
+    }
+    .about-wrapper h1 {
+        font-size: 26px;
+        line-height: 34px;
+    }
+    .intro-wrapper p {
+        font-size: 16px;
+        line-height: 24px;
+
+    }
     .counter-box{
         margin-bottom:20px;
     }
